--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^12.0.0",
+    "@clerk/nextjs": "^6.36.5",
+    "framer-motion": "^12.23.26",
     "next": "16.1.1",
     "react": "19.1.1",
     "react-dom": "19.1.1"
